gcc/testsuite/rust/rustc/ui/use/use-crate-self_dg.rs
use crate::{self};
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

